--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "migration:generate": "npm run build && npm run typeorm -- migration:generate -d src/config/typeorm.ts src/migrations/migration",
     "migration:run": "npm run build && npm run typeorm -- migration:run -d src/config/typeorm.ts",
     "migration:revert": "npm run build && npm run typeorm -- migration:revert -d src/config/typeorm.ts",
-    "generate:api-client": "npx swagger-typescript-api generate -p ./openapi-schema.json -o ../frontend/generated -n api.ts --axios"
+    "generate:api-client": "npx swagger-typescript-api generate -p ./openapi-schema.json -o ../frontend/generated -n api.ts --axios --module-name-index=\"1\""
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
