--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.4.7",
     "eslint-plugin-prettier": "^5.5.4",
     "google-auth-library": "^10.1.0",
