--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx,tsx --report-unused-disable-directives --max-warnings 0",
+    "lintfix": "eslint . --ext js,jsx,tsx --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "axios": "^1.7.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
+    "primereact": "^10.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.9.5",
