--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,21 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx,tsx --report-unused-disable-directives --max-warnings 0",
-    "lintfix": "eslint . --ext js,jsx,tsx --fix",
+    "lint": "eslint . --ext js,jsx,tsx,ts --report-unused-disable-directives --max-warnings 0",
+    "lintfix": "eslint . --ext js,jsx,tsx,ts --fix",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.7.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
     "primereact": "^10.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.9.5",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "typescript-eslint": "^8.47.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -28,10 +30,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.5.6",
     "typescript": "^5.4.5",
     "vite": "^5.2.0",
