--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.7.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
