--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.7.2",
+    "fabric": "^6.9.0",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
     "primeicons": "^7.0.0",
