Replace `redirect` with `useNavigate` across components for React Router v6 compatibility.
- Updated `UserDropdown`, `login` page, and `apiClient` to use `useNavigate` for navigation handling.
- Adjusted `/auth/login` redirection logic to prevent unnecessary reloads.
- Added `vite/client` to `tsconfig` types for improved TypeScript support.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "ESNext",
+    "types": ["vite/client"],
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
@@ -15,7 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "importsNotUsedAsValues": "error",
+    "importsNotUsedAsValues": "error"
   },
   "include": ["./src"]
 }
