--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@types/passport-jwt": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "eslint-plugin-prettier": "^5.5.4",
     "google-auth-library": "^10.1.0",
