--- a/frontend/.env.dev
+++ b/frontend/.env.dev
@@ -1,2 +1,3 @@
 API_URL=http://localhost:3000
-AUTH_GOOGLE_CLIENT_ID=139462110371-ec19fm28cn80tad5u87d92tmo5sq71t9.apps.googleusercontent.com
+AUTH_GOOGLE_CLIENT_ID=
+VITE_JWT_EXPIRE_TIME=
