--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint ./src --ext js,jsx,tsx,ts --report-unused-disable-directives --max-warnings 0",
     "lintfix": "eslint ./src --ext js,jsx,tsx,ts --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
@@ -40,7 +41,8 @@
     "prettier": "^3.6.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "vitest": "^4.0.15"
   },
   "main": "index.js",
   "license": "MIT"
